Fix demo masthead size

--- a/test/demo.css
+++ b/test/demo.css
@@ -79,6 +79,10 @@ a {
   margin-bottom: 2px;
 }
 
+.masthead-brand h1 {
+  font-size: 1.5em;
+}
+
 .masthead-nav > li {
   display: inline-block;
 }
