angular app for /test/ page

--- a/test/app/css/demo.css
+++ b/test/app/css/demo.css
@@ -40,7 +40,7 @@ a {
     margin-bottom: 48px;
 }
 
-#glyphs {
+#glyph {
     background-color: #fffeef;
     margin-bottom:20px;
     padding-top:50px;
