working Inheritance for canvas cntrl

--- a/test/app/css/demo.css
+++ b/test/app/css/demo.css
@@ -61,7 +61,7 @@ a {
     padding-bottom: 80px;
 }
 
-#glyphsSentence {
+#paragraphWord {
     background-color: #fffeef;
     margin-bottom:20px;
     padding-top:5px;
