slider automatation, and dat gui using

--- a/test/app/css/demo.css
+++ b/test/app/css/demo.css
@@ -153,6 +153,9 @@ a {
     display:inline;
     width:400px;
 }
+.dg.main {
+    padding-top: 40px;
+}
 
 /*.sliders.weight #spaceSlider {*/
     /*display:none;*/
