--- a/app/css/demo_new.css
+++ b/app/css/demo_new.css
@@ -15,13 +15,15 @@ h1, h2, h3, h4, h5, h6, metaptitel {
 	  padding-top: 50px;
     font-family: 'Open Sans', sans-serif;
 }
+
+
 p, div, metaptitelsmall {
     font-family: 'Open Sans', sans-serif;
 }
 
-metaptitel {letter-spacing:5px; font-size: 40px; font-weight: 300 }
+metaptitel {letter-spacing:5px; font-size: 40px; font-weight: 300; padding-left: 50px }
 
-metaptitelsmall {letter-spacing:3px; font-size: 20px}
+metaptitelsmall {letter-spacing:3px; font-size: 20pxl; text-align: center; padding-left: 50px }
 
 .carousel-control.left, .carousel-control.right {
     background-image: none
