--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,7 @@ $def with (page)
 <link rel="icon" href="/static/favicon.ico" type="image/x-icon"/>
 
 <link rel="stylesheet" href="/static/dist/css/app.css" />
-
+<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" />
 <link rel="stylesheet" type="text/css" href="/static/mfg.css"/>
 
 <script type="text/javascript" src="/static/dist/lib/libs.js"></script>
