--- a/templates/base.html
+++ b/templates/base.html
@@ -58,8 +58,10 @@ $def with (page)
         </div><!--/.nav-collapse -->
       </div>
     </div>
-    <div class="container">
-    $:page
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-md-10 col-md-offset-1">$:page</div>
+      </div>
     </div>
 
 
