fixed static build errors

--- a/templates/base.html
+++ b/templates/base.html
@@ -10,8 +10,7 @@ $def with (page)
 <link rel="stylesheet" href="/static/dist/css/app.css" />
 <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" />
 <link rel="stylesheet" type="text/css" href="/static/mfg.css"/>
-
-<script type="text/javascript" src="/static/dist/lib/libs.js"></script>
+<script type="text/javascript" src="/static/dist/libs.js"></script>
 </head>
 <body>
 
@@ -66,7 +65,6 @@ $def with (page)
 
 
 </body>
-
 <script type="text/javascript" src="/static/dist/app.js"></script>
 <script>
   function setmfparser(mode) {
