--- a/next/app/ng/app.less
+++ b/next/app/ng/app.less
@@ -1,7 +1,23 @@
-metapolator{
-    display: block;
-    color: black;
-    
+@import (reference) "/lib/bower_components/bootstrap/less/mixins";
+@import "container/container";
+
+@app-color: #ddd;
+
+html {
+    font-family: sans;
+}
+body {
+    margin: 0;
 }
 
-@import "container/container";
+metapolator {
+    display: block;
+    border: 3px solid @container-border;
+    color: black;
+    background-color: @container;
+    .box-shadow(0 1px 3px rgba(0,0,0,.25))
+}
+
+
+
+
