--- a/next/app/ng/container/container.less
+++ b/next/app/ng/container/container.less
@@ -1,4 +1,11 @@
+@import (reference) "../app";
+@import "../widget/widget";
+
+@container: #dd1111;
+@container-border: #f9ab38;
+
 mtk-container{
+    padding: .5em;
     display:block;
-    background: lightgrey;
+    background-color: @app-color;
 }
