--- a/templates/workspace.html
+++ b/templates/workspace.html
@@ -13,7 +13,7 @@ $var title: Workspace
     }
 
     .dropzone:before {
-        content: "Drop archive with UFO here";
+        content: "Drop archive with UFO.zip here";
     }
 
     .dragging * {
