--- a/app/lib/ui/redPill/app.less
+++ b/app/lib/ui/redPill/app.less
@@ -1,4 +1,5 @@
 @import (reference) "/lib/bower_components/bootstrap/less/mixins";
+@import "./redPillMaster/redPillMaster";
 @app-color: #ddd;
 
 html {
@@ -8,6 +9,10 @@ body {
     margin: 0;
 }
 
+label {
+    display: block;
+}
+
 red-pill {
     display: block;
     border: 3px solid black;
@@ -15,7 +20,6 @@ red-pill {
     background-color: @app-color;
     .box-shadow(0 1px 3px rgba(0,0,0,.25))
 }
-
 
 
 
