first usable preview of the hacker gui

--- a/app/lib/ui/redPill/redPillMaster/redPillMaster.less
+++ b/app/lib/ui/redPill/redPillMaster/redPillMaster.less
@@ -1,10 +1,10 @@
 @import (reference) "../app";
 @import "../filesMode/filesMode";
 
-@master-border: #f9ab38;
-
 mtk-red-pill-master {
-    padding: .5em;
     display:block;
-    background-color: green;
+}
+
+mtk-red-pill-master .controls {
+    width: 450px;
 }
