--- a/app/lib/ui/redPill/app.less
+++ b/app/lib/ui/redPill/app.less
@@ -1,25 +1,81 @@
 @import (reference) "/lib/bower_components/bootstrap/less/mixins";
+
 @import "./redPillMaster/redPillMaster";
-@app-color: #ddd;
+
+@app-color: #CCC;
+@app-gap: .5em;
+@app-border: 1px solid black;
 
 html {
-    font-family: sans;
+    font-family: monospace;
+    background-color: @app-color;
+    overflow-y: scroll;
 }
 body {
     margin: 0;
+    padding: 0 3em;
 }
 
-label {
+red-pill label {
     display: block;
+}
+
+red-pill label select {
+    vertical-align: top;
 }
 
 red-pill {
     display: block;
-    border: 3px solid black;
     color: black;
-    background-color: @app-color;
-    .box-shadow(0 1px 3px rgba(0,0,0,.25))
+    border: @app-border;
+    padding: @app-gap;
+    background: white;
 }
 
 
+mtk-red-pill-glyphs {
+    display:block;
+    width: calc(~"100% - 450px");
+}
 
+mtk-red-pill-glyphs label{
+    display: inline;
+    vertical-align: bottom;
+}
+
+mtk-red-pill-glyphs > label > * {
+    vertical-align: middle;
+}
+
+mtk-red-pill-glyph {
+    display: block;
+    border: @app-border;
+    margin-left: @app-gap;
+    margin-bottom: @app-gap;
+    overflow: auto;
+}
+
+mtk-red-pill-glyphs ol{
+    white-space: normal;
+    padding:0;
+}
+
+mtk-red-pill-glyphs li {
+    display: inline-block;
+    vertical-align: top;
+    width:33.333%
+}
+
+red-pill .children {
+    white-space: nowrap;
+    
+    .masters{
+        width: 450px;
+    }
+    
+    mtk-red-pill-glyphs,
+    .masters {
+        display: inline-block;
+        vertical-align: top;
+    }
+}
