--- a/app/lib/ui/redPill/filesMode/filesMode.less
+++ b/app/lib/ui/redPill/filesMode/filesMode.less
@@ -2,7 +2,22 @@
 @import (reference) "/lib/bower_components/codemirror/lib/codemirror.css";
 
 mtk-files-mode {
-    padding: .5em;
     display:block;
-    background-color: @app-color;
+}
+
+mtk-files-mode>ol {
+    list-style: none;
+    padding: 0 0 @app-gap 0;
+}
+
+mtk-files-mode>ol>li {
+    margin-bottom: @app-gap;
+    border: @app-border;
+    background: @app-color;
+}
+
+
+mtk-files-mode .CodeMirror {
+    height: 400px;
+
 }
