put style in style.css

--- a/slider/css/style.css
+++ b/slider/css/style.css
@@ -67,6 +67,7 @@
 			left: 0;
 			top: 0;
 			overflow-y: hidden;
+			transition: all 100ms ease;
 		}
 		
 			.panel {
@@ -178,6 +179,7 @@
 				#instances {
 					height: 67%;
 					overflow: hidden;
+					transition: all 100ms ease;
 				}
 				
 				#sliders {
